feat: implement MapStruct and refactor service layer to use mappers - added ProductMapper and UserMapper interfaces - updated service classes to use MapStruct for entity-DTO conversion