@@ -1,9 +1,9 @@
 package com.veggieshop.service;
 
 import com.veggieshop.dto.OrderDto;
-import com.veggieshop.dto.OrderItemDto;
 import com.veggieshop.entity.*;
 import com.veggieshop.exception.ResourceNotFoundException;
+import com.veggieshop.mapper.OrderMapper; // جديد
 import com.veggieshop.repository.*;
 import com.veggieshop.util.PriceCalculator;
 import lombok.RequiredArgsConstructor;
@@ -12,7 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,6 +23,7 @@ public class OrderServiceImpl implements OrderService {
     private final ProductRepository productRepository;
     private final UserRepository userRepository;
     private final OfferRepository offerRepository;
+    private final OrderMapper orderMapper; // جديد
 
     @Override
     public OrderDto.OrderResponse create(Long userId, OrderDto.OrderCreateRequest request) {
@@ -39,10 +39,7 @@ public class OrderServiceImpl implements OrderService {
             Product product = productRepository.findById(itemReq.getProductId())
                     .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
 
-            // Get all offers for this product
             List<Offer> offers = offerRepository.findByProductId(product.getId());
-
-            // Calculate the final price with product discount and active offer(s)
             BigDecimal finalPrice = PriceCalculator.calculateFinalPrice(product, offers, java.time.LocalDate.now());
 
             return OrderItem.builder()
@@ -51,7 +48,7 @@ public class OrderServiceImpl implements OrderService {
                     .quantity(itemReq.getQuantity())
                     .price(finalPrice)
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
 
         // Calculate total price
         BigDecimal total = items.stream()
@@ -69,16 +66,15 @@ public class OrderServiceImpl implements OrderService {
             productRepository.save(product);
         });
 
-        return mapToResponse(savedOrder);
+        return orderMapper.toOrderResponse(savedOrder);
     }
-
 
     @Override
     @Transactional(readOnly = true)
     public OrderDto.OrderResponse findById(Long id) {
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
-        return mapToResponse(order);
+        return orderMapper.toOrderResponse(order);
     }
 
     @Override
@@ -86,8 +82,8 @@ public class OrderServiceImpl implements OrderService {
     public List<OrderDto.OrderResponse> findByUser(Long userId) {
         return orderRepository.findByUserId(userId)
                 .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(orderMapper::toOrderResponse)
+                .toList();
     }
 
     @Override
@@ -95,8 +91,8 @@ public class OrderServiceImpl implements OrderService {
     public List<OrderDto.OrderResponse> findAll() {
         return orderRepository.findAll()
                 .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(orderMapper::toOrderResponse)
+                .toList();
     }
 
     @Override
@@ -105,29 +101,5 @@ public class OrderServiceImpl implements OrderService {
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
         order.setStatus(Order.Status.valueOf(status.toUpperCase()));
         orderRepository.save(order);
-    }
-
-    private OrderDto.OrderResponse mapToResponse(Order order) {
-        OrderDto.OrderResponse dto = new OrderDto.OrderResponse();
-        dto.setId(order.getId());
-        dto.setUserId(order.getUser().getId());
-        dto.setUserName(order.getUser().getName());
-        dto.setTotalPrice(order.getTotalPrice());
-        dto.setStatus(order.getStatus().name());
-        dto.setCreatedAt(order.getCreatedAt());
-        dto.setItems(order.getOrderItems().stream()
-                .map(this::mapItemToResponse)
-                .collect(Collectors.toList()));
-        return dto;
-    }
-
-    private OrderItemDto.OrderItemResponse mapItemToResponse(OrderItem item) {
-        OrderItemDto.OrderItemResponse dto = new OrderItemDto.OrderItemResponse();
-        dto.setId(item.getId());
-        dto.setProductId(item.getProduct().getId());
-        dto.setProductName(item.getProduct().getName());
-        dto.setQuantity(item.getQuantity());
-        dto.setPrice(item.getPrice());
-        return dto;
     }
 }
